# graduation_project

client/: CMakeLists.txt  client.cpp  client.cpp.bkp  getopt_win32.c  getopt_win32.h
server/: CMakeLists.txt  server.cpp
server/sql-injection-detection-main/src/sql_injection_detection/: __init__.py  main.py
